# InsiderTradingDeployment

./: pyproject.toml  render.yaml
insider/insider/: asgi.py  settings.py  urls.py  wsgi.py
insider/insiderreact/: package-lock.json  package.json
