[tool.poetry]
name = "insidertrading"
version = "0.1.0"
description = ""
authors = ["Thad Sandidge <102259621+ThaddaeusSandidge@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
react = "^4.3.0"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
